# LinFX

./: CMakeLists.txt  README.md  library.cpp  main.cpp  run.sh
exec/: CMakeLists.txt  main.cpp  parse.cpp
resources/: fragmentshader.fs  shaders.qrc
source/: CMakeLists.txt  glClearInjection.cpp  headerfile.h  hooker.cpp  hooker.h
source/OpenGLhelpers/: CMakeLists.txt  effect.cpp  effect.h  object3d.cpp  object3d.h  print.cpp  print.h
